# ModernCpp_DesignPatterns

./: README.md
1_SOLID_DesignPrinciples/: README.md
1_SOLID_DesignPrinciples/1_SingleResponsibilityPrinciple/: SingleResponsibilityPrinciple.md  main.cpp
1_SOLID_DesignPrinciples/2_OpenClosedPrinciple/: Open-Close-Principle.md  main.cpp  main_not_scalable.cpp
1_SOLID_DesignPrinciples/3_LiskovSubstitutionPrinciple/: LiskovSubstitutionPrinciple.md  main.cpp
1_SOLID_DesignPrinciples/4_InterfaceSegregationPrinciple/: InterfaceSegregationPrinciple.md  main.cpp  main_notSegregated.cpp
1_SOLID_DesignPrinciples/5_DependencyInversionPrinciple/: 5_DependencyInversionPrinciple.md  main.cpp  main_withDependnecyToLowLevelModule.cpp
2_Builder/: README.md
2_Builder/1_WithOutBuilders/: main.cpp
2_Builder/2_Builders/: main.cpp
2_Builder/3_FluentBuilder/: main.cpp
2_Builder/4_GroovyStyleBuilder/: main.cpp
2_Builder/5_BuilderFacets/: CMakeLists.txt  Person.cpp  PersonAddressBuilder.hpp  PersonBuilder.cpp  PersonJobBuilder.hpp  main.cpp
2_Builder/6_Assignment/: CMakeLists.txt  codeBuilder.cpp  main.cpp  testRunner.cpp
3_Factories/: README.md
3_Factories/1_PointExample/: main.cpp
3_Factories/2_FactoryMethod/: main.cpp
3_Factories/3_Factory/: main.cpp
3_Factories/4_InnerFactory/: CMakeLists.txt  main.cpp
3_Factories/5_AbstractFactory/: CoffeeFactory.hpp  DrinkFactory.hpp  HotDrink.hpp  main.cpp
3_Factories/6_FunctionalFactory/: DrinkFactory.hpp  HotDrinkFactory.hpp  TeaFactory.hpp
3_Factories/7_FactoryAssignmnet/: CMakeLists.txt  PersonFactory.cpp  main.cpp  testRunner.cpp
4_Prototype/: README.md
4_Prototype/1_RecordKeeping/: main.cpp
4_Prototype/2_Prototype/: main.cpp  main_1.cpp
4_Prototype/3_PrototypeFactory/: main.cpp
4_Prototype/4_PrototypeViaSerialization/: CMakeLists.txt  main.cpp
4_Prototype/5_PrototypeAssignment/: CMakeLists.txt  Prototype.cpp  main.cpp
5_Singleton/: README.md
5_Singleton/1_SingletonImplementation/: capitals.txt  main.cpp
5_Singleton/3_SingletonInDependencyInjection/: CMakeLists.txt  main.cpp
5_Singleton/4_SingletonLifetimeInBoostDi/: CMakeLists.txt  main.cpp
_C++Concepts/: OverloadingtheOperator.md  auto.md  const.md
(+5 files in other folders)
